# spdif-decoder

./: CMakeLists.txt  README.md  myspdif.h  myspdifdec.c  spdif-loop.c
